--- a/src/styles/AboutSection.css
+++ b/src/styles/AboutSection.css
@@ -68,7 +68,7 @@
 }
 
 .massive-text {
-  font-size: clamp(3rem, 12vw, 12rem);
+  font-size: clamp(1rem, 3vw, 12rem);
   line-height: 0.85;
   margin: 0;
   font-weight: 900;
@@ -110,10 +110,11 @@
 }
 
 .driver-name {
-  color: #000000;
-  font-size: 0.9rem;
-  font-weight: 700;
-  letter-spacing: 0.05em;
+    font-size: clamp(1rem, 3vw, 5rem);
+    font-weight: 300;
+    line-height: 0.85;
+    margin: 0 0 2rem 0;
+    color: #e7dddd;
 }
 
 .driver-time {
